--- a/Demo/SPScrollNumLabel/Base.lproj/Main.storyboard
+++ b/Demo/SPScrollNumLabel/Base.lproj/Main.storyboard
@@ -46,13 +46,15 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10g-vc-NrL" customClass="SPScrollNumLabel">
-                                <rect key="frame" x="139.5" y="309.5" width="96.5" height="48"/>
-                                <color key="backgroundColor" red="0.85490196080000003" green="0.70588235290000001" blue="0.50980392159999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="140" y="309.5" width="96.5" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="40"/>
                                 <color key="textColor" red="0.81568627449999997" green="0.0078431372550000003" blue="0.1058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isCommonLabel" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="animateDuration">
+                                        <real key="value" value="0.34999999999999998"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isCommonLabel" value="NO"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="138-PX-pat" customClass="SPScrollNumLabel">
